tree-sitter-comp0012/corpus/negative/comments.txt
====================
Single line comments
====================

#Not a comment

--- 
(source_file
   (ERROR
      (ERROR
         (ERROR)
         (identifier)
         (identifier)
         (identifier)))

====================
Block comments Open
====================

#Comment*#

---
(source_file
(ERROR
   (UNEXPECTED 'C')
   (identifier)
   (arithmetic_operator)
   (UNEXPECTED '\n')))

====================
Block comments Close
====================

#* Comment
#

---
(source_file
   (ERROR
      (UNEXPECTED '\0')))
