tree-sitter-comp0012/corpus/negative/statements.txt
===========
Open String
===========

"hello

---

(source_file 
  (ERROR))

============
Close String
============

hello"

---

(source_file
  (ERROR
    (identifier)))

===========
Assignments
===========

var = "yellow"
var str = "yellow

---

(source_file
  (ERROR
    (string)
    (identifier)))
