tree-sitter-comp0012/corpus/positive/blocks.txt
==============
Numbers (nums)
==============

{0;}
{ 0; }
{ 
    0; }

{ 0; 
}
{ 
    0; 
}
---
(source_file
  (block
    (int))
  (block
    (int))
  (block
    (int))
  (block
    (int))
  (block
    (int)))
